--- a/globals.css
+++ b/globals.css
@@ -6,10 +6,13 @@
 
 .nyt-divider {
   border: none;
-  border-top: 1px solid #E5E5E5;
   height: 1px;
-  background: #E5E5E5;
+  background: #e5e5e5;
+  width: 100%;
   margin: 2rem 0;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  /* Tailwind utility: h-[1px] bg-zinc-200 w-full my-8 */
 }
 
 
